# wayfairings

./: meson.build  uncrustify.cfg
.git_hooks/: pre-commit
subprojects/wf-notifications/: meson.build
subprojects/wf-notifications/data/: gresource.xml  style.css
subprojects/wf-notifications/src/: AbstractToast.vala  Application.vala  Authn.vala  AuthnToast.vala  CloseReason.vala  Notification.vala  NotificationServer.vala  NotificationToast.vala  PolkitServer.vala  ToastAxis.vala  ToastStack.vala
